--- a/starter-code/contact.html
+++ b/starter-code/contact.html
@@ -5,45 +5,64 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="contact.css">
   
   <title>Frontend Mentor | myteam website challenge - Contact</title>
 </head>
 <body>
-
-  home
-  about
-
-  contact us
-
-
-
-  Contact
-
-  Ask us about
-
-  The quality of our talent network
-  Usage & implementation of our software
-  How we help drive innovation
-
-  Name
-  Email Address
-  Company Name
-  Title
-  Message
-
-  submit
-
-
-
-  home
-  about
-
-  987  Hillcrest Lane
-  Irvine, CA
-  California 92714
-  Call Us : 949-833-7432
-
-  Copyright 2020. All Rights Reserved
-  
+  <div class="container">
+    <header>
+      <div class="logo">
+        <img src="./assets/logo.svg" alt="logo">
+      </div>
+      <nav>
+        <ul class="nav-links">
+          <a href="index.html"><li>home</li></a>
+          <a href="about.html"><li>about</li></a>
+        </ul>
+      </nav>
+      <div class="h-links">
+        
+      </div>
+      
+      <input type="button" value="contact us">
+    </header>
+    <div class="main">
+      <div class="content">
+        <div class="content-body">
+          <div class="content-body-left">
+            <h1>Contact</h1>
+            <h3>Ask us about</h3> 
+           <p>The quality of our talent network</p> 
+           <p>Usage & implementation of our software</p> 
+           <p> How we help drive innovation</p>
+          </div>
+          <div class="content-body-right">
+           <input type="text" name="Name" placeholder="Name"> 
+           <input type="email" name="Email Address" id="" placeholder="Email Address"> 
+           <input type="text" name="Company Name" id="" placeholder="Company Name"> 
+           <input type="text" name="Title" placeholder="Title"> 
+           <textarea name="message" id="" placeholder="Message" cols="30" rows="10"></textarea>
+           <button type="submit">submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer">
+    <div class="footer-content">
+      <div class="footer-content-left"></div>
+      <div class="footer-content-right"></div>
+        <a href="index.html">home</a>
+        <a href="about.html">about</a>
+        <p class="addres">
+          987  Hillcrest Lane
+          Irvine, CA
+          California 92714
+          Call Us : 949-833-7432
+        </p>
+          <p>Copyright 2020. All Rights Reserved</p>
+    </div>
+  </div>
 </body>
 </html>
