styled the footer

--- a/starter-code/contact.html
+++ b/starter-code/contact.html
@@ -21,13 +21,8 @@
           <a href="about.html"><li>about</li></a>
         </ul>
       </nav>
-      <div class="h-links">
-        
-      </div>
-      
-      <input type="button" value="contact us">
+      <input class="btn-1" type="button" value="contact us">
     </header>
-    <div class="main">
       <div class="content">
         <div class="content-body">
           <div class="content-body-left">
@@ -47,22 +42,36 @@
           </div>
         </div>
       </div>
-    </div>
   </div>
   <div class="footer">
-    <div class="footer-content">
-      <div class="footer-content-left"></div>
-      <div class="footer-content-right"></div>
-        <a href="index.html">home</a>
-        <a href="about.html">about</a>
-        <p class="addres">
-          987  Hillcrest Lane
-          Irvine, CA
-          California 92714
-          Call Us : 949-833-7432
-        </p>
+    <div class="footer-content row">
+      <div class="content-right">
+        <div class="logo">
+          <img src="./assets/logo.svg" alt="logo">
+        </div>
+        <nav>
+          <ul class="footer-nav-links">
+            <a href="index.html"><li>home</li></a>
+            <a href="about.html"><li>about</li></a>
+          </ul>
+        </nav>
+      </div>
+        <div class="address">
+         <p>987  Hillcrest Lane</p> 
+         <p>Irvine, CA</p> 
+         <p>California 92714</p> 
+         <p>Call Us : 949-833-7432</p> 
+        </div>
+        <div class="socials">
+          <ul class="social-icons">
+            <a href="#"><img src="./assets/icon-facebook.svg" alt="facebook"></a>
+          <a href="#"><img src="./assets/icon-pinterest.svg" alt="pinterest"></a>
+          <a href="#"><img src="./assets/icon-twitter.svg" alt="linkedin"></a>
+          </ul>
           <p>Copyright 2020. All Rights Reserved</p>
+        </div> 
     </div>
+  </div>
   </div>
 </body>
 </html>
