styled the contact form

--- a/starter-code/contact.html
+++ b/starter-code/contact.html
@@ -23,6 +23,9 @@
       </nav>
       <input class="btn-1" type="button" value="contact us">
     </header>
+    <div class="side-left">
+      <img src="./assets/bg-pattern-about-2-contact-1.svg" alt="">
+    </div>
       <div class="content">
         <div class="content-body">
           <div class="content-body-left">
@@ -71,6 +74,9 @@
             </form>
           </div>
         </div>
+      </div>
+      <div class="side-right">
+        <img src="./assets/bg-pattern-contact-2.svg" alt="">
       </div>
   </div>
   <div class="footer">
