--- a/starter-code/contact.html
+++ b/starter-code/contact.html
@@ -14,14 +14,25 @@
     <header>
       <div class="logo">
         <img src="./assets/logo.svg" alt="logo">
+          <div class="links">
+            <a href="index.html"><li>home</li></a>
+            <a href="about.html"><li>about</li></a>
+          </div>
       </div>
-      <nav>
+      <!-- <div id="teamSidenav" class="sidenav">
         <ul class="nav-links">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <a href="index.html"><li>home</li></a>
           <a href="about.html"><li>about</li></a>
         </ul>
-      </nav>
+      </div>
       <input class="btn-1" type="button" value="contact us">
+      <img onclick="openNav()" src="./assets/icon-hamburger.svg" alt=""> -->
+      <nav class="nav">
+        <!-- <a href="index.html"><li>home</li></a>
+        <a href="about.html"><li>about</li></a> -->
+        <a class="btn-1" href="contact.html"><li>contact us</li></a>
+      </nav>
     </header>
     <div class="side-left">
       <img src="./assets/bg-pattern-about-2-contact-1.svg" alt="">
@@ -49,7 +60,7 @@
           <div class="content-body-right">
             <form>
               <div class="input-box">
-                <input type="text" name="Name" placeholder="Name">
+                <input type="text" name="Name" placeholder="Name" required>
               </div>
             
             <div class="input-box">
@@ -109,5 +120,17 @@
     </div>
   </div>
   </div>
+  <!-- <script>
+    /* Set the width of the side navigation to 250px */
+    function openNav() {
+  document.getElementById("teamSidenav").style.width = "250px";
+  }
+
+  /* Set the width of the side navigation to 0 */
+  function closeNav() {
+  document.getElementById("teamSidenav").style.width = "0";
+  }
+  </script> -->
+  <script src="./menu.js"></script>
 </body>
 </html>
