--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Livvic:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="about.css">
-  <title>myteam website challenge - About</title>
+  <title>Myteam website challenge - About</title>
 </head>
 <body>
   <main class="page">
@@ -89,7 +89,7 @@
               </div>
               <div class="box">
                 <img src="/assets/avatar-christian.jpg" alt="Christian">
-                <h3>Cristian Duncan </h3>
+                <h3>Cristian Duncan</h3>
                 <h4>Co-founder & COO</h4>
                 <div class="cross-svg">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"><path fill="#012F34" fill-rule="evenodd" d="M10 0v5.999L16 6v4h-6v6H6v-6H0V6h6V0h4z"/></svg>
