styled the mobile view

--- a/starter-code/contact.html
+++ b/starter-code/contact.html
@@ -26,11 +26,10 @@
           <a href="about.html"><li>about</li></a>
         </ul>
       </div>
-      <input class="btn-1" type="button" value="contact us">
-      <img onclick="openNav()" src="./assets/icon-hamburger.svg" alt=""> -->
+      <!-<img class="openNav" onclick="openNav()" src="./assets/icon-hamburger.svg" alt=""> -->
+      
+      <!--<img onclick="closeNav()" src="./assets/icon-close.svg" alt=""> -->
       <nav class="nav">
-        <!-- <a href="index.html"><li>home</li></a>
-        <a href="about.html"><li>about</li></a> -->
         <a class="btn-1" href="contact.html"><li>contact us</li></a>
       </nav>
     </header>
