made some changes

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <link rel="stylesheet" href="contact.css">
   
-  <title>Frontend Mentor | myteam website challenge - Contact</title>
+  <title>Myteam website challenge - Contact</title>
 </head>
 <body>
   <div class="container">
