--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
         <div class="logo">
           <img src="./assets/logo.svg" alt="logo">
         </div>
-        <nav>
+        <nav class="foot-link">
           <ul class="footer-nav-links">
             <a href="index.html"><li>home</li></a>
             <a href="about.html"><li>about</li></a>
