Updated the footer content

--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
           <div class="content-body-right">
             <form id="form">
               <div class="input-box">
-                <input type="text" id="username" name="username" placeholder="Name">
+                <input type="text" id="username" name="username" placeholder="Name" required>
                 <div class="error"></div>
               </div>
 
