--- a/about.html
+++ b/about.html
@@ -26,13 +26,27 @@
             </div>
           </div>
           <button class="button"><a href="contact.html">contact us</a></button>
-          <div class="menu-svg">
+          <!-- <div class="menu-svg">
             <svg width="20" height="17" viewBox="0 0 20 17" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect width="20" height="3" fill="white"/>
               <rect y="7" width="20" height="3" fill="white"/>
               <rect y="14" width="20" height="3" fill="white"/>
               </svg>              
-          </div> 
+          </div>  -->
+          <div class="mob-menu">
+            <img class="mob-open"  src="./assets/icon-hamburger.svg" alt="openSvg">
+            <div class="mob-wrapper close">
+              <img src="./assets/icon-close.svg" class="mob-close" alt="closeSvg">
+                <div class="mob-list">
+                  <a href="index.html" class="mob-list_item">home</a>
+                  <a href="about.html" class="mob-list_item">about</a>
+                  <button class="btn"><a href="contact.html">contact us</a></button>
+                  <div class="menu-svg1">
+                    <img src="./assets/bg-pattern-about-1-mobile-nav-1.svg" alt="openSvg1">
+                  </div>
+                </div>
+            </div>
+          </div>
         </nav>
         <div class="hero">
           <div class="about">
@@ -494,5 +508,6 @@
       </section>
   </main>
   <script src="about.js"></script>
+  <script src="menu.js"></script>
 </body>
 </html>
